--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -103,6 +103,10 @@ No media query since this is the default in Bootstrap because it is "mobile firs
     height: 56px;
   }
 
+  .fixed-top {
+    width: 100vw;
+  }
+
   .navBarShadow {
     background-color: #f0e1ded0;
     -webkit-backdrop-filter: blur(5px);
